--- a/examples/example-react/public/index.html
+++ b/examples/example-react/public/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 <head>
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/figure-favicons/favicon-32x32.png" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Provenance.io | WalletConnect-JS Web Demo" />
+  <meta name="description" content="Figure.tech | WalletConnect-JS Demo" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -21,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Provenance.io | WalletConnect-JS | Web Demo</title>
+  <title>Figure.tech | WalletConnect-JS Demo</title>
 </head>
 
 <body>
